force-app/main/default/objects/SiebelDocumentLink__x/SiebelDocumentLink__x.object-meta.xml
<CustomObject>
    <description>SiebelDocumentLink</description>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SiebelDocumentLink</externalName>
    <label>Documento Siebel</label>
    <pluralLabel>Documenti Siebel</pluralLabel>
</CustomObject>