force-app/main/default/objects/SiebelDocumentLink__x/fields/COMMENTS__c.field-meta.xml
<CustomField>
    <fullName>COMMENTS__c</fullName>
    <description>COMMENTS</description>
    <externalDeveloperName>COMMENTS</externalDeveloperName>
    <label>Commenti</label>
    <length>250</length>
    <type>Text</type>
</CustomField>