force-app/main/default/objects/SiebelDocumentLink__x/fields/CONFLICT_ID__c.field-meta.xml
<CustomField>
    <fullName>CONFLICT_ID__c</fullName>
    <description>CONFLICT_ID</description>
    <externalDeveloperName>CONFLICT_ID</externalDeveloperName>
    <label>ID conflitto</label>
    <length>15</length>
    <type>Text</type>
</CustomField>