force-app/main/default/objects/SiebelDocumentLink__x/fields/FILE_EXT__c.field-meta.xml
<CustomField>
    <fullName>FILE_EXT__c</fullName>
    <description>FILE_EXT</description>
    <externalDeveloperName>FILE_EXT</externalDeveloperName>
    <label>Estensione file</label>
    <length>10</length>
    <type>Text</type>
</CustomField>