force-app/main/default/objects/SiebelDocumentLink__x/fields/FILE_NAME__c.field-meta.xml
<CustomField>
    <fullName>FILE_NAME__c</fullName>
    <description>FILE_NAME</description>
    <externalDeveloperName>FILE_NAME</externalDeveloperName>
    <label>Nome file</label>
    <length>200</length>
    <type>Text</type>
</CustomField>