force-app/main/default/objects/SiebelDocumentLink__x/fields/FILE_SIZE__c.field-meta.xml
<CustomField>
    <fullName>FILE_SIZE__c</fullName>
    <description>FILE_SIZE</description>
    <externalDeveloperName>FILE_SIZE</externalDeveloperName>
    <label>Dimensione file</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>