force-app/main/default/objects/SiebelDocumentLink__x/fields/FILE_SRC_TYPE__c.field-meta.xml
<CustomField>
    <fullName>FILE_SRC_TYPE__c</fullName>
    <description>FILE_SRC_TYPE</description>
    <externalDeveloperName>FILE_SRC_TYPE</externalDeveloperName>
    <label>Tipo risorsa</label>
    <length>30</length>
    <type>Text</type>
</CustomField>