force-app/main/default/objects/SiebelDocumentLink__x/fields/MODIFIEDDATE_AZURE__c.field-meta.xml
<CustomField>
    <fullName>MODIFIEDDATE_AZURE__c</fullName>
    <description>MODIFIEDDATE_AZURE</description>
    <externalDeveloperName>MODIFIEDDATE_AZURE</externalDeveloperName>
    <label>Data modifica Azure</label>
    <type>DateTime</type>
</CustomField>