force-app/main/default/objects/SiebelDocumentLink__x/fields/NOME_FILE_DOWNLOAD__c.field-meta.xml
<CustomField>
    <fullName>NOME_FILE_DOWNLOAD__c</fullName>
    <label>Nome File Tecnico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>