force-app/main/default/objects/SiebelDocumentLink__x/fields/SR_ID__c.field-meta.xml
<CustomField>
    <fullName>SR_ID__c</fullName>
    <description>Riferimento alla RDS</description>
    <externalDeveloperName>SR_ID</externalDeveloperName>
    <label>RDS</label>
    <length>15</length>
    <referenceTo>SiebelRds__x</referenceTo>
    <relationshipLabel>Documenti</relationshipLabel>
    <relationshipName>Documenti</relationshipName>
    <type>ExternalLookup</type>
</CustomField>