force-app/main/default/objects/SiebelDocumentLink__x/fields/SR_NUM__c.field-meta.xml
<CustomField>
    <fullName>SR_NUM__c</fullName>
    <description>SR_NUM</description>
    <externalDeveloperName>SR_NUM</externalDeveloperName>
    <label>Richiesta</label>
    <length>64</length>
    <referenceTo>SiebelRds__x</referenceTo>
    <relationshipLabel>Documenti</relationshipLabel>
    <relationshipName>SiebelDocumentLink1</relationshipName>
    <type>ExternalLookup</type>
</CustomField>